# su3_stream_mdrange

./: CMakeLists.txt  Tuner.hpp  Tuner1D.hpp  field-4d-mdrange-axpy-halo.cpp  su3xsu3-stream-1drange-static-mu-reftype.cpp  su3xsu3-stream-halo-static-mu-array-SUN.cpp  su3xsu3-stream-mdrange-1dalias-static-mu-reftype.cpp  su3xsu3-stream-mdrange-static-mu-array-SUN.cpp  su3xsu3-stream-mdrange-static-mu-reftype.cpp  su3xsu3-stream-mdrange-static-mu.cpp  su3xsu3-stream-mdrange-static.cpp  su3xsu3-stream-range-static-mu-reftype.cpp  utils.hpp
compilation/amd_mi250/: do_cmake.sh  load_modules.sh
run_scripts_and_results/: plot_results.R
run_scripts_and_results/amd_mi250/: run.sh
run_scripts_and_results/dual_epyc2_7742_gcc/: run.sh
run_scripts_and_results/nvidia_a100/: run.sh
